# Object_Annotator

./: CMakeLists.txt
include/: annotator.hpp  global.hpp  main.hpp
src/: annotator.cpp  main.cpp
