cmake_minimum_required(VERSION 2.8)
project( Labeling_Assistance_Tool )
find_package( OpenCV REQUIRED )
include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/src src_list)
add_executable( ${PROJECT_NAME} ${src_list} )
target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
